--- a/templates/Back/index.html.twig
+++ b/templates/Back/index.html.twig
@@ -27,19 +27,20 @@
                             </div>
                             <!-- Ajoutez d'autres cards ici -->
                             <div class="card">
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col mt-0">
-                                            <h5 class="card-title">Gestion shopping</h5>
-                                        </div>
-                                        <div class="col-auto">
-                                            <div class="stat text-primary">
-                                                <i class="align-middle" data-feather="shopping-cart"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col mt-0">
+                <a href="{{ path('app_commande_stats') }}" >Gestion shopping</a>
+            </div>
+            <div class="col-auto">
+                <div class="stat text-primary">
+                    <i class="align-middle" data-feather="shopping-cart"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
                             <div class="card">
                                 <div class="card-body">
                                     <div class="row">
