--- a/templates/Back/article/index.html.twig
+++ b/templates/Back/article/index.html.twig
@@ -25,8 +25,12 @@
                             <div class="col-md-4">
                                 <img src="{{ asset(article.photoArticle) }}" class="card-img-top article-image" style="width: 100%; height: 200px;" alt="Article Image">
                             </div>
+                            
                             <div class="col-md-8">
                                 <div class="card-body">
+                                 {% if qrCodes[article.idArticle] is defined %}
+                                    <img src="{{ asset(qrCodes[article.getIdArticle()]) }}"  style="width: 80px; height: 80px;" alt="QR Code">
+                                {% endif %}
                                     <h5 class="card-title font-weight-bold" style="color: black;">{{ article.nomArticle }}</h5>
                                     <p class="card-text"><strong>Prix:</strong> {{ article.prixArticle }}</p>
                                     <p class="card-text"><strong>Quantité:</strong> {{ article.quantiteArticle }}</p>
@@ -51,4 +55,25 @@
         </div>
    
     </div>
+    {% if articles|length > 0 %}
+        <nav aria-label="Page navigation">
+            <ul class="pagination justify-content-center">
+                {% if page > 1 %}
+                    <li class="page-item">
+                        <a class="page-link" href="{{ path('app_article_index_back', {'page': page - 1}) }}">Précédent</a>
+                    </li>
+                {% endif %}
+                {% for i in 1..maxPage %}
+                    <li class="page-item {% if page == i %}active{% endif %}">
+                        <a class="page-link" href="{{ path('app_article_index_back', {'page': i}) }}">{{ i }}</a>
+                    </li>
+                {% endfor %}
+                {% if page < maxPage %}
+                    <li class="page-item">
+                        <a class="page-link" href="{{ path('app_article_index_back', {'page': page + 1}) }}">Suivant</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>
+    {% endif %}
 {% endblock %}
