--- a/templates/Back/commande/index.html.twig
+++ b/templates/Back/commande/index.html.twig
@@ -21,9 +21,15 @@
             {% for commande in commandes %}
                 <div class="col-md-12 mb-4">
                     <div class="card">
-                        <div class="card-header">
-                            <h5 class="card-title">Commande #{{ commande.idCommande }}</h5>
+                       <div class="card-header d-flex justify-content-between align-items-center">
+                       <h5 class="card-title">Commande #{{ commande.idCommande }}</h5>
+                        <div>
+                            <a href="{{ path('download_pdf', {'idCommande': commande.idCommande}) }}" class="btn btn-sm btn-outline-secondary">
+                                <i class="bi bi-file-pdf"></i> Télécharger PDF
+                            </a>
                         </div>
+                        
+                    </div>
                         <div class="card-body">
                             <p>Nombre d'articles: {{ commande.nombreArticle }}</p>
                             <p>Prix total: {{ commande.prixTotale }} DT</p>
@@ -50,6 +56,7 @@
                                         <div class="btn-group">
                             <a href="{{ path('app_commande_show_back', {'idCommande': commande.idCommande}) }}" class="btn btn-secondary">Voir détails</a>
                             <a href="{{ path('app_commande_edit', {'idCommande': commande.idCommande}) }}" class="btn btn-secondary">Modifier</a>
+                            
                             {{ include('Back/commande/_delete_form.html.twig') }}
                         </div>
                         </div>
