--- a/templates/back/dashboard.html.twig
+++ b/templates/back/dashboard.html.twig
@@ -568,7 +568,7 @@ function drawChart1() {
     var options1 = {
         title: 'Total des prix des billets par station',
         is3D: true,
-        backgroundColor: 'white',
+          backgroundColor: '#f8f9fa',
         titleTextStyle: {color: 'black'},
         legendTextStyle: {color: 'black'},
     };
@@ -597,7 +597,7 @@ var data2 = google.visualization.arrayToDataTable([
         var options2 = {
             title: 'Pourcentage des billets par station',
             is3D: true,
-            backgroundColor: 'white',
+             backgroundColor: '#f8f9fa',
             titleTextStyle: {color: 'black'},
             legendTextStyle: {color: 'black'},
         };
