--- a/templates/back/transportback.html.twig
+++ b/templates/back/transportback.html.twig
@@ -42,8 +42,7 @@
 
 <div style="margin-top: 20px;"> <!-- Adjust margin-top as needed -->
  <i data-feather="search"></i>
-
-  <input type="text" id="searchInput" oninput="search()" placeholder=" nom/aresse/type...">
+  <input type="text" id="searchInput" oninput="search()" placeholder=" nom/adresse/type...">
   <i data-feather="refresh-cw" title="Trier par date" onclick="sortTable()"></i> 
     <table class="table table-bordered" id="stationTable">
         <thead>
@@ -69,9 +68,13 @@
         </tbody>
     </table>
 </div>
-
+        <div class="d-flex justify-content-center">
+             {% do list.setPageRange(2) %}
+             {{ knp_pagination_render(list, 'pagination.html.twig') }} 
+         </div>
  <script>
     function search() {
+        
         // Récupère la valeur de recherche
         let input = document.getElementById("searchInput");
         let filter = input.value.toUpperCase();
@@ -125,8 +128,4 @@
         }
     }
 </script>
-<div class="d-flex justify-content-center">
-             {% do list.setPageRange(2) %}
-             {{ knp_pagination_render(list, 'pagination.html.twig') }}
-         </div>
 {% endblock %}
